argo-rollouts/basic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  type: NodePort
  selector:
    app: rollouts-demo
  ports:
    - port: 80
      targetPort: http
