argo-rollouts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
spec:
  selector:
    app: rollouts-demo
  ports:
    - port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
spec:
  selector:
    app: rollouts-demo
  ports:
    - port: 80
      targetPort: http
