argo-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-demo-stable
spec:
  ingressClassName: nginx
  rules:
    - host: rollouts-demo.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Rollout.spec.strategy.canary.stableService 字段指定的值
                name: rollouts-demo-stable
                port:
                  number: 80
